--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "http://hamid814.github.io/portfolio-app",
   "browserslist": {
     "production": [
       ">0.2%",
