--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "git": "git add . && git commit -m \"dev\"",
     "gitpush": "git add . && git commit -m \"dev\" && git push -u origin master"
   },
